Separate implementations for RP2040 and ESP32, automated arduino-cli setup

--- a/libraries/transmission-esp32/library.properties
+++ b/libraries/transmission-esp32/library.properties
@@ -6,5 +6,5 @@ sentence=transmission-arduino is a networking library. It allows sending and rec
 paragraph=transmission-cpp is the Arduino implementation. Cross-platform interfaces are provided in transmission-cpp
 category=Data Processing
 url=https://github.com/OperatorFoundation/novela-arduino
-architectures=*
+architectures=esp32
 includes=src/ReliableConnectionUsbCdc.h,src/ReliableConnectionSerial1.h
