--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,6 @@ include(esp32.cmake)
 add_subdirectory("libraries/transmission-cpp")
 add_subdirectory("libraries/transmission-rp2040")
 add_subdirectory("libraries/transmission-esp32")
+add_subdirectory("libraries/transmission-teensy")
 add_subdirectory("transmission-stdio")
 add_subdirectory("tests/")
