Fixed library.properties architecture

--- a/libraries/transmission-arduino/library.properties
+++ b/libraries/transmission-arduino/library.properties
@@ -6,5 +6,5 @@ sentence=transmission-teensy is a networking library. It allows sending and rece
 paragraph=transmission-teensy is the Teensy implementation. Cross-platform interfaces are provided in transmission-cpp
 category=Data Processing
 url=https://github.com/OperatorFoundation/novela-arduino
-architectures=teensy,avr
+architectures=*
 includes=src/ReliableConnectionUsbCdc.h,src/ReliableConnectionSerial1.h
