Added Connection for macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,6 @@ add_subdirectory("libraries/transmission-cpp")
 add_subdirectory("libraries/transmission-rp2040")
 add_subdirectory("libraries/transmission-esp32")
 add_subdirectory("libraries/transmission-teensy")
+add_subdirectory("libraries/transmission-macos")
 add_subdirectory("transmission-stdio")
 add_subdirectory("tests/")
