Added per-library .h files to make Arduino import easier

--- a/libraries/transmission-cpp/library.properties
+++ b/libraries/transmission-cpp/library.properties
@@ -7,4 +7,4 @@ paragraph=transmission-cpp is the cross-platform C++ implementation. You will al
 category=Data Processing
 url=https://github.com/OperatorFoundation/Transmission
 architectures=*
-includes=src/Connection.h
+includes=src/transmission-cpp.h
