Generic Arduino serial

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,12 @@ project(transmission)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-include(arduino-cli.cmake)
-include(rp2040.cmake)
-include(esp32.cmake)
+#include(arduino-cli.cmake)
+#include(rp2040.cmake)
+#include(esp32.cmake)
 
 add_subdirectory("libraries/transmission-cpp")
+add_subdirectory("libraries/transmission-arduino")
 add_subdirectory("libraries/transmission-rp2040")
 add_subdirectory("libraries/transmission-esp32")
 add_subdirectory("libraries/transmission-teensy")
