Transitioned to new project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,19 +4,18 @@ project(transmission)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-#include(arduino-cli.cmake)
-#include(rp2040.cmake)
-#include(esp32.cmake)
+set(TRANSMISSION ${CMAKE_SOURCE_DIR}/src/cpp)
+set(TRANSMISSION_ARDUINO ${CMAKE_SOURCE_DIR}/src/arduino)
+set(TRANSMISSION_ESP32 ${CMAKE_SOURCE_DIR}/src/esp32)
+set(TRANSMISSION_RP2040 ${CMAKE_SOURCE_DIR}/src/rp2040)
+set(TRANSMISSION_TEENSY ${CMAKE_SOURCE_DIR}/src/teensy)
+set(TRANSMISSION_MACOS ${CMAKE_SOURCE_DIR}/src/macos)
+set(ION_LIB_DIR ${CMAKE_SOURCE_DIR}/libs/ion-cpp)
+set(ONDA ${CMAKE_SOURCE_DIR}/lib/onda)
+set(CMAKE_HELPERS ${CMAKE_SOURCE_DIR}/lib/cmake-helpers)
 
-set(ONDA ${CMAKE_SOURCE_DIR}/libraries-esp32/onda)
-set(CMAKE_HELPERS ${CMAKE_SOURCE_DIR}/libraries-esp32/cmake-helpers)
-
-add_subdirectory("libraries/onda")
-add_subdirectory("libraries/transmission-cpp")
-add_subdirectory("libraries/transmission-arduino")
-add_subdirectory("libraries/transmission-rp2040")
-add_subdirectory("libraries/transmission-esp32")
-add_subdirectory("libraries/transmission-teensy")
-add_subdirectory("libraries/transmission-macos")
+add_subdirectory(${ONDA})
+add_subdirectory(${TRANSMISSION})
+add_subdirectory(${TRANSMISSION_MACOS})
 add_subdirectory("transmission-stdio")
 add_subdirectory("tests/")
