--- a/src/arduino/CMakeLists.txt
+++ b/src/arduino/CMakeLists.txt
@@ -2,10 +2,8 @@ cmake_minimum_required(VERSION 3.31)
 project(transmission-arduino)
 
 set(CMAKE_CXX_STANDARD 17)
-set(TRANSMISSION_LIB_DIR ${CMAKE_SOURCE_DIR}/libraries/transmission-cpp)
-set(TRANSMISSION_LIB_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
-set(TRANSMISSION_ARDUINO_DIR ${CMAKE_SOURCE_DIR}/libraries/transmission-arduino)
-set(TRANSMISSION_ARDUINO_SRC_DIR ${TRANSMISSION_ARDUINO_DIR}/src)
+set(TRANSMISSION_LIB_SRC_DIR ${TRANSMISSION}/src)
+set(TRANSMISSION_ARDUINO_SRC_DIR ${TRANSMISSION_ARDUINO}/src)
 set(TRANSMISSION_ARDUINO_EXAMPLE_DIR ${TRANSMISSION_ARDUINO_DIR}/examples/echo-server)
 include_directories(${TRANSMISSION_LIB_SRC_DIR} ${TRANSMISSION_ARDUINO_SRC_DIR})
 
