--- a/src/esp32/CMakeLists.txt
+++ b/src/esp32/CMakeLists.txt
@@ -2,10 +2,8 @@ cmake_minimum_required(VERSION 3.31)
 project(transmission-esp32)
 
 set(CMAKE_CXX_STANDARD 17)
-set(TRANSMISSION_LIB_DIR ${CMAKE_SOURCE_DIR}/libraries/transmission-cpp)
-set(TRANSMISSION_LIB_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
-set(TRANSMISSION_ESP32_DIR ${CMAKE_SOURCE_DIR}/libraries/transmission-esp32)
-set(TRANSMISSION_ESP32_SRC_DIR ${TRANSMISSION_ESP32_DIR}/src)
+set(TRANSMISSION_LIB_SRC_DIR ${TRANSMISSION}/src)
+set(TRANSMISSION_ESP32_SRC_DIR ${TRANSMISSION_ESP32}/src)
 set(TRANSMISSION_ESP32_EXAMPLE_DIR ${TRANSMISSION_ESP32_DIR}/examples/echo-server)
 include_directories(${TRANSMISSION_LIB_SRC_DIR} ${TRANSMISSION_ESP32_SRC_DIR})
 
