--- a/src/rp2040/CMakeLists.txt
+++ b/src/rp2040/CMakeLists.txt
@@ -2,10 +2,8 @@ cmake_minimum_required(VERSION 3.31)
 project(transmission-rp2040)
 
 set(CMAKE_CXX_STANDARD 17)
-set(TRANSMISSION_LIB_DIR ${CMAKE_SOURCE_DIR}/libraries/transmission-cpp)
-set(TRANSMISSION_LIB_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
-set(TRANSMISSION_RP2040_DIR ${CMAKE_SOURCE_DIR}/libraries/transmission-rp2040)
-set(TRANSMISSION_RP2040_SRC_DIR ${TRANSMISSION_RP2040_DIR}/src)
+set(TRANSMISSION_LIB_SRC_DIR ${TRANSMISSION}/src)
+set(TRANSMISSION_RP2040_SRC_DIR ${TRANSMISSION_RP2040}/src)
 set(TRANSMISSION_RP2040_EXAMPLE_DIR ${TRANSMISSION_RP2040_DIR}/examples/echo-server)
 include_directories(${TRANSMISSION_LIB_SRC_DIR} ${TRANSMISSION_RP2040_SRC_DIR})
 
