--- a/src/teensy/CMakeLists.txt
+++ b/src/teensy/CMakeLists.txt
@@ -2,10 +2,8 @@ cmake_minimum_required(VERSION 3.31)
 project(transmission-teensy)
 
 set(CMAKE_CXX_STANDARD 17)
-set(TRANSMISSION_LIB_DIR ${CMAKE_SOURCE_DIR}/libraries/transmission-cpp)
-set(TRANSMISSION_LIB_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
-set(TRANSMISSION_TEENSY_DIR ${CMAKE_SOURCE_DIR}/libraries/transmission-teensy)
-set(TRANSMISSION_TEENSY_SRC_DIR ${TRANSMISSION_TEENSY_DIR}/src)
+set(TRANSMISSION_LIB_SRC_DIR ${TRANSMISSION}/src)
+set(TRANSMISSION_TEENSY_SRC_DIR ${TRANSMISSION_TEENSY}/src)
 set(TRANSMISSION_TEENSY_EXAMPLE_DIR ${TRANSMISSION_TEENSY_DIR}/examples/echo-server)
 include_directories(${TRANSMISSION_LIB_SRC_DIR} ${TRANSMISSION_TEENSY_SRC_DIR})
 
