Added WiFi/TCP connection for ESP32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,13 @@ set(TRANSMISSION_RP2040 ${CMAKE_SOURCE_DIR}/src/rp2040)
 set(TRANSMISSION_TEENSY ${CMAKE_SOURCE_DIR}/src/teensy)
 set(TRANSMISSION_MACOS ${CMAKE_SOURCE_DIR}/src/macos)
 set(ION_LIB_DIR ${CMAKE_SOURCE_DIR}/libs/ion-cpp)
-set(ONDA ${CMAKE_SOURCE_DIR}/lib/onda)
+set(ONDA ${CMAKE_SOURCE_DIR}/lib/onda/src/cpp)
+set(ONDA_ARDUINO ${CMAKE_SOURCE_DIR}/lib/src/arduino)
 set(CMAKE_HELPERS ${CMAKE_SOURCE_DIR}/lib/cmake-helpers)
 
 add_subdirectory(${ONDA})
 add_subdirectory(${TRANSMISSION})
 add_subdirectory(${TRANSMISSION_MACOS})
+add_subdirectory(${TRANSMISSION_ESP32})
 add_subdirectory("transmission-stdio")
 add_subdirectory("tests/")
