--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -9,6 +9,8 @@ set(TRANSMISSION_LIB_SOURCE_DIR ${TRANSMISSION}/src)
 
 include_directories(${TRANSMISSION_LIB_SOURCE_DIR})
 file(GLOB_RECURSE TRANSMISSION_FILES ${TRANSMISSION_LIB_SOURCE_DIR}/*.cpp)
-add_library(transmission-cpp-lib STATIC ${TRANSMISSION_FILES})
+add_library(transmission-cpp-lib STATIC ${TRANSMISSION_FILES}
+  ../esp32/src/ReliableConnectionWiFiTcp.cpp
+  ../esp32/src/ReliableConnectionWiFiTcp.h)
 
 target_include_directories(transmission-cpp-lib PUBLIC ${TRANSMISSION_LIB_SOURCE_DIR})
